syntax = "proto3";
import "user/user.proto";

package user;
option go_package = "/pb";


message CreateUserReq {      
	string email = 1;
	string full_name = 2;
	string password = 3;
	string role = 4;
}
message CreateUserRes {    
	User data = 1;
}
