syntax = "proto3";

package user;
option go_package = "/pb";

message User {
    int64 user_id = 1;           
};
